chore:bump version 0.0.5-SNAPSHOT to 0.0.5 chore:bump htsjdk 4.1.1 to 4.1.3 chore:bump spring-boot-starter-parent 3.3.4 to 3.3.6 chore:bump frontend-maven-plugin 1.15.0 to 1.15.1 chore:suppress Java 21 dynamic agent loading warning